refactor for Sonar